--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.0.1/js/jquery.terminal.min.js"></script>
+  <script src="helpers.js"></script>
   <script src="index.js"></script>
 
 </html>
