--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.0.1/css/jquery.terminal.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/2.0.1/css/jquery.terminal.min.css">
   <link rel="stylesheet" href="style.css">
 
   <div class="header">
-    <a class="fa fa-github" id="github-btn" href="https://github.com/ctcuff" target="_blank"></a> Terminal
+    <a class="fa fa-github" id="github-btn" href="https://github.com/ctcuff" target="_blank"></a>
+    <a href="https://github.com/ctcuff/ctcuff.github.io">Terminal</a>
   </div>
 
   <body>
