Fixed incorrect links and lowered top section font size on mobile

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 A website to track the occurrences of a given keyword on Twitter in real time. This project was built
                 using Python (Flask) as a backend, and React.js and Javascript in the frontend.
               </p>
-              <a href="https://ucfparking.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
-              <a href="https://github.com/ctcuff/UCFParking-Web" target="_blank" class="card-link">View code</a>
+              <a href="https://tweeter-tracker.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
+              <a href="https://github.com/ctcuff/Tweet-Tracker" target="_blank" class="card-link">View code</a>
             </div>
           </div>
 
@@ -74,8 +74,8 @@
                 UCF's parking site and saves it to an online database. The backend was created using Python (Flask,
                 again) and the frontend utilizes Javascript and jQuery.
               </p>
-              <a href="https://tweeter-tracker.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
-              <a href="https://github.com/ctcuff/Tweet-Tracker" target="_blank" class="card-link">View code</a>
+              <a href="https://ucfparking.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
+              <a href="https://github.com/ctcuff/UCFParking-Web" target="_blank" class="card-link">View code</a>
             </div>
           </div>
 
@@ -125,7 +125,8 @@
         </div>
 
         <div>
-          <a class="display-4 text-muted" href="static/resume.pdf" target="_blank" data-toggle="tooltip" title="View resume"
+          <a class="display-4 text-muted" href="static/resume.pdf" target="_blank" data-toggle="tooltip"
+             title="View resume"
              data-placement="left">
             <img src="images/resume.png" alt="Resume">
           </a>
