--- a/index.html
+++ b/index.html
@@ -1,142 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Cameron Cuff</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="static/styles.css">
-  </head>
-  <body>
-
-    <div class="flex-container">
-      <div id="image-header">
-        <img src="https://avatars2.githubusercontent.com/u/7400747?v=4" alt="" class=" shadow rounded-circle"
-             id="profile-pic"
-             width="200">
-        <h1 class="display-4 text-muted" id="name">Cameron Cuff</h1>
-      </div>
-      <div class="flex-container-row">
-        <a href="#about" class="display-4 text-muted" id="href-about">
-          <span>About</span>
-        </a>
-        <a href="#projects" class="display-4 text-muted" id="href-projects">
-          <span>Projects</span>
-        </a>
-        <a href="#contact" class="display-4 text-muted" id="href-contact">
-          <span>Contact</span>
-        </a>
-      </div>
-    </div>
-
-    <div id="about" class="row">
-      <div id="about-left">
-        <div class="center-container">
-          <h1 class="display-4 text-header text-muted">About</h1>
-          <p class="p-styled">
-            Hey there, my name is Cameron Cuff. I'm a Junior studying Computer Science at University of
-            Central Florida. I enjoy programming in Java, Python, and Javascript and I'm currently
-            learning Android development, React.js, and a bit of Flask for backend tasks. In my free time, I love
-            to play piano and clarinet.
-          </p>
-        </div>
-      </div>
-      <div class="column" id="about-right">
-        <div class=frame>
-          <!--Image provided by https://absurd.design/-->
-          <span class="helper"></span><img src="images/07.png" width="90%" alt="about"/>
-        </div>
-      </div>
-    </div>
-
-    <div id="projects">
-      <h1 class="display-4 text-header text-muted">Projects</h1>
-      <div class="card-wrapper">
-        <div class="card-container">
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">Tweet-Tracker</h5>
-              <p class="card-text">
-                A website to track the occurrences of a given keyword on Twitter in real time. This project was built
-                using Python (Flask) as a backend, and React.js and Javascript in the frontend.
-              </p>
-              <a href="https://tweeter-tracker.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
-              <a href="https://github.com/ctcuff/Tweet-Tracker" target="_blank" class="card-link">View code</a>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">UCFParking</h5>
-              <p class="card-text">
-                This is an API and website that tracks how full each parking garage is. Every hour, a scrapper scraps
-                UCF's parking site and saves it to an online database. The backend was created using Python (Flask,
-                again) and the frontend utilizes Javascript and jQuery.
-              </p>
-              <a href="https://ucfparking.herokuapp.com/" target="_blank" class="card-link">Go to site</a>
-              <a href="https://github.com/ctcuff/UCFParking-Web" target="_blank" class="card-link">View code</a>
-            </div>
-          </div>
-
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">MotionPy</h5>
-              <p class="card-text">
-                A motion detection system using a Raspberry Pi 3, camera module, breadboard, some paper
-                clips and a top-of-the-line cardboard box. A Python server (surprise surprise, it's Flask again)
-                running on the Raspberry Pi sends an Android app, written in Java and Kotlin, a notification and a
-                picture when movement is detected. Images are saved online via Firebase.
-              </p>
-              <a href="https://github.com/ctcuff/MotionPy" target="_blank" class="card-link">View code</a>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <div id="contact">
-      <div class="contact-wrapper">
-
-        <div>
-          <a class="display-4 text-muted" href="https://github.com/ctcuff" target="_blank" data-toggle="tooltip"
-             title="Open Github"
-             data-placement="right">
-            <img src="images/github.png" alt="Github">
-          </a>
-        </div>
-
-        <div>
-          <a class="display-4 text-muted" href="mailto:dev.ctcuff@gmail.com" data-toggle="tooltip"
-             data-placement="left"
-             title="Send me an email">
-            <img src="images/email.png" alt="Email">
-          </a>
-        </div>
-
-        <div>
-          <a class="display-4 text-muted" href="https://www.linkedin.com/in/cameron-cuff-126405161/" target="_blank"
-             data-toggle="tooltip"
-             data-placement="right"
-             title="Open Linkedin">
-            <img src="images/linked-in.png" alt="Linked-in">
-          </a>
-        </div>
-
-        <div>
-          <a class="display-4 text-muted" href="static/resume.pdf" target="_blank" data-toggle="tooltip"
-             title="View resume"
-             data-placement="left">
-            <img src="images/resume.png" alt="Resume">
-          </a>
-        </div>
-
-      </div>
-    </div>
-  </body>
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  <script src="static/index.js"></script>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"><title>Cameron Cuff</title><link href="/ctcuff.github.io/static/css/main.e1c74557.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/ctcuff.github.io/static/js/main.40c93655.js"></script></body></html>
