--- a/resume.html
+++ b/resume.html
@@ -74,11 +74,11 @@
         <ul>
           <li>
             Designed an API/website that returns a JSON response containing information about each
-            parking garage. Data is automatically added to a database every hour and can be visualized via
-            a graph.
+            parking garage. Data is automatically added to a database every hour and can be visualized 
+            with a line graph.
           </li>
           <li>
-            Hosted on Heroku built with Python (Flask), Javascript, HTML, CSS, JQuery, and a PostgreSQL
+            Hosted on Heroku built with Python (Flask), Javascript, HTML, CSS, and a PostgreSQL
             database
           </li>
         </ul>
@@ -90,7 +90,8 @@
             Built a website that tracks the occurrences of a given keyword on Twitter in real time using web sockets
           </li>
           <li>
-            Hosted on Heroku with a backend in Python (Flask), frontend built using React.js, CSS, Javascript
+            Hosted on Heroku with a backend in Python (Flask), frontend 
+            built using React.js, CSS, Javascript, and TypeScript
           </li>
         </ul>
       </div>
