--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
       </div>
       <h2 class="display-4 header">Skills</h2>
       <p class="indent">
-        Java, Kotlin, Python, Javascript, HTML, CSS, JQuery, Git, Android, Node.js, React.js, Bootstrap
+        Java, Python, Javascript, HTML, CSS, JQuery, Git, Android, Node.js, React.js, Vue.js, Bootstrap
       </p>
       <h2 class="display-4 header" id="projects">Projects</h2>
       <div class="indent">
@@ -68,7 +68,7 @@
             with a line graph.
           </li>
           <li>
-            Hosted on Heroku built with Python (Flask), Javascript, HTML, CSS, and a PostgreSQL
+            Hosted on Heroku built with Python (Flask), Vue, JavaScript, HTML, CSS, and a MongoDB
             database
           </li>
         </ul>
@@ -81,7 +81,7 @@
           </li>
           <li>
             Hosted on Heroku with a backend in Python (Flask), frontend
-            built using React.js, CSS, Javascript, and TypeScript
+            built using React.js, Redux, CSS, JavaScript, and TypeScript
           </li>
         </ul>
       </div>
