--- a/public/resume.html
+++ b/public/resume.html
@@ -56,7 +56,7 @@
       </div>
       <h2 class="display-4 header">Skills</h2>
       <p class="indent">
-        Java, Python, Javascript, HTML, CSS, JQuery, Git, Android, Node.js, React.js, Vue.js, Bootstrap
+        Java, Python, Javascript, HTML, CSS, JQuery, Git, Node.js, React.js, Vue.js, Bootstrap
       </p>
       <h2 class="display-4 header" id="projects">Projects</h2>
       <div class="indent">
