--- a/resume.html
+++ b/resume.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>cuff_resume</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
   </head>
   <style>
     body {
@@ -12,64 +15,110 @@
     hr {
       margin: 32px 0 32px 0;
     }
+    /* prettier-ignore*/
     p, li, ul, a {
-      font-size: 20px;
+      font-size: 18px;
     }
     li {
       margin: 16px 0 16px 0;
-    }
-    div > h1:not(:first-child) {
-      margin-bottom: 32px;
     }
     h2:not(#education) {
       margin-top: 32px;
     }
     .header:not(h1) {
-      font-size: 42px;
-      margin-bottom: 12px;
+      font-size: 32px;
+      margin-bottom: 8px;
     }
     #contact-info > * {
       margin-right: 32px;
-      font-size: 24px;
+      font-size: 19px;
     }
     .indent {
       margin-left: 16px;
-    }
-    #projects {
-      margin-bottom: 24px;
     }
   </style>
   <body>
     <div class="container">
       <h1 class="display-4 header">Cameron Cuff</h1>
       <div id="contact-info">
-        <a href="mailto:dev.ctcuff@gmail.com" class="text-muted">dev.ctcuff@gmail.com</a>
-        <a href="https://ctcuff.github.io/" class="text-muted">ctcuff.github.io</a>
-        <a href="https://github.com/ctcuff" class="text-muted">github.com/ctcuff</a>
+        <a href="mailto:dev.ctcuff@gmail.com" class="text-muted">
+          dev.ctcuff@gmail.com
+        </a>
+        <a href="https://ctcuff.github.io/" class="text-muted">
+          ctcuff.github.io
+        </a>
+        <a href="https://github.com/ctcuff" class="text-muted">
+          GitHub
+        </a>
+        <a href="https://www.linkedin.com/in/cameron-cuff-126405161/" class="text-muted">
+          Linkedin
+        </a>
         <a href="tel:+1-904-233-8541" class="text-muted">(904)-233-8541</a>
       </div>
-      <hr>
+      <hr />
       <h2 class="display-4 header" id="education">Education</h2>
       <div class="indent">
         <p>University of Central Florida | B.S. Computer Science</p>
         <p>Expected Graduation Date: Fall 2021</p>
       </div>
+      <hr />
       <h2 class="display-4 header">Skills</h2>
       <p class="indent">
-        Java, Python, Javascript, HTML, CSS, JQuery, Git, Node.js, React.js, Vue.js, Bootstrap
+        Java, Python, Javascript, HTML, CSS, Git, Node.js, React.js, Vue.js
       </p>
-      <h2 class="display-4 header" id="projects">Projects</h2>
+      <hr />
+      <h2 class="display-4 header">Work Experience</h2>
       <div class="indent">
-        <a href="https://github.com/ctcuff/UCFParking-Web">UCFParking-API</a>
+        <p>
+          Android Developer
+          <small>
+            | University of North Florida | February 2018 – September 2018
+          </small>
+        </p>
         <ul>
           <li>
-            Designed an API/website that returns a JSON response containing information about each
-            parking garage. Data is automatically added to a database every hour and can be visualized
-            with a line graph.
+            Worked with a student and professor to develop an Android app for
+            another professor. I was charged with making GET and POST requests
+            to a JSON API developed by a fellow professor.
           </li>
           <li>
-            Hosted on Heroku built with Python (Flask), Vue, JavaScript, HTML, CSS, and a MongoDB
-            database
+            Built in Android studio using Java.
+          </li>
+        </ul>
+        <p>
+          Web Applications Developer
+          <small>
+            | UCF Center for Distributed Learning | September 2019 - Present
+          </small>
+        </p>
+        <ul>
+          <li>
+            Added new endpoints to an existing Python API maintaining test coverage of
+            100%.
+          </li>
+          <li>
+            Contributed to an open source React application that assists instructors
+            in developing rich and interactive course content for students.
+          </li>
+          <li>
+            Collaborated with teammates to resolve issues across multiple
+            projects.
+          </li>
+        </ul>
+      </div>
+      <hr />
+      <h2 class="display-4 header" id="projects">Projects</h2>
+      <div class="indent">
+        <a href="https://github.com/ctcuff/UCFParking-API">UCFParking-API</a>
+        <ul>
+          <li>
+            Designed an API/website that returns a JSON response containing
+            information about each parking garage. Data is automatically added
+            to a database every hour and can be visualized with a line graph.
+          </li>
+          <li>
+            Hosted on Heroku built with Python (Flask), Vue, JavaScript, HTML,
+            CSS, and a MongoDB database
           </li>
         </ul>
       </div>
@@ -77,11 +126,12 @@
         <a href="https://github.com/ctcuff/Tweet-Tracker">Tweet-Tracker</a>
         <ul>
           <li>
-            Built a website that tracks the occurrences of a given keyword on Twitter in real time using web sockets
+            Built a website that tracks the occurrences of a given keyword on
+            Twitter in real time using web sockets
           </li>
           <li>
-            Hosted on Heroku with a backend in Python (Flask), frontend
-            built using React.js, Redux, CSS, JavaScript, and TypeScript
+            Hosted on Heroku with a backend in Python (Flask), frontend built
+            using React.js, Redux, CSS, JavaScript, and TypeScript
           </li>
         </ul>
       </div>
@@ -89,26 +139,16 @@
         <a href="https://github.com/ctcuff/MotionPy">MotionPy</a>
         <ul>
           <li>
-            A motion detection system running on a Raspberry Pi 3. When motion is detected, a picture is saved and a
-            notification is sent to an Android app.
+            A motion detection system running on a Raspberry Pi 3. When motion
+            is detected, a picture is saved and a notification is sent to an
+            Android app.
           </li>
           <li>
-            Server is running on a Raspberry Pi 3 using Python (Flask), Android app built using Java and Kotlin, images
-            saved to a Firebase database
+            Server is running on a Raspberry Pi 3 using Python (Flask), Android
+            app built using Java and Kotlin, images saved to a Firebase database
           </li>
         </ul>
       </div>
-      <h2 class="display-4 header">Experience</h2>
-      <ul class="indent">
-        <li>Android developer February 2018 – September 2018</li>
-        <li>
-          Worked with a student and professor to develop an Android app for another professor. I was
-          charged with making GET and POST requests to a JSON API developed by a fellow professor.
-        </li>
-        <li>
-          Built in Android studio using Java.
-        </li>
-      </ul>
     </div>
   </body>
 </html>
