--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-143284067-2"></script><script>window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-143284067-2"></script><script>window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
 
-    gtag('config', 'UA-143284067-2');</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>Cameron Cuff</title><link href=/css/app.9b2934cc.css rel=preload as=style><link href=/css/chunk-vendors.f53ad359.css rel=preload as=style><link href=/js/app.f89541c4.js rel=preload as=script><link href=/js/chunk-vendors.e827c9ab.js rel=preload as=script><link href=/css/chunk-vendors.f53ad359.css rel=stylesheet><link href=/css/app.9b2934cc.css rel=stylesheet></head><body><noscript><strong>This site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.e827c9ab.js></script><script src=/js/app.f89541c4.js></script></body></html>
+      gtag('config', 'UA-143284067-2')</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>Cameron Cuff</title><link href=/css/app.26d88922.css rel=preload as=style><link href=/css/chunk-vendors.f53ad359.css rel=preload as=style><link href=/js/app.8217ac65.js rel=preload as=script><link href=/js/chunk-vendors.e827c9ab.js rel=preload as=script><link href=/css/chunk-vendors.f53ad359.css rel=stylesheet><link href=/css/app.26d88922.css rel=stylesheet></head><body><noscript><strong>This site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.e827c9ab.js></script><script src=/js/app.8217ac65.js></script></body></html>
