--- a/public/resume.html
+++ b/public/resume.html
@@ -35,7 +35,7 @@
       <hr />
       <h2 class="header">Skills</h2>
       <p class="indent skills">
-        Javascript, Python, Java, HTML, CSS, Git, NodeJS, React, Vue, MongoDB
+        JavaScript, Python, Java, HTML, CSS, Git, NodeJS, React, Vue, MongoDB
       </p>
       <hr />
       <h2 class="header">Work Experience</h2>
