--- a/index.html
+++ b/index.html
@@ -1,57 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cameron Cuff</title>
-    <link rel="icon" href="./favicon.ico" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans&family=DM+Serif+Display&family=Lora:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./style.css" />
-  </head>
-  <body>
-    <script src="./index.js"></script>
-    <section>
-      <h1>Under Construction!</h1>
-      <p>
-        This site will be back soon! In the mean time, check out these links:
-      </p>
-      <div class="links">
-        <a
-          href="https://github.com/ctcuff"
-          rel="noopener noreferrer"
-          target="_blank"
-        >
-          GitHub
-        </a>
-        <a
-          href="https://www.linkedin.com/in/~cam/"
-          rel="noopener noreferrer"
-          target="_blank"
-        >
-          LinkedIn
-        </a>
-        <a
-          href="./cameron_cuff_resume.pdf"
-          rel="noopener noreferrer"
-          target="_blank"
-        >
-          Resume
-        </a>
-      </div>
-      <a
-        href="https://github.com/ctcuff/ctcuff.github.io"
-        rel="noopener noreferrer"
-        target="_blank"
-        class="link__development"
-      >
-        Track development
-      </a>
-    </section>
-  </body>
-</html>
+<!DOCTYPE html><html lang=en><head><script async src="https://www.googletagmanager.com/gtag/js?id=UA-143284067-2"></script><script>window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag('js', new Date())
+
+      gtag('config', 'UA-143284067-2')</script><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>Cameron Cuff</title><link href=/css/app.6b3e38ab.css rel=preload as=style><link href=/css/chunk-vendors.5a536556.css rel=preload as=style><link href=/js/app.36a7aa94.js rel=preload as=script><link href=/js/chunk-vendors.5d1766e1.js rel=preload as=script><link href=/css/chunk-vendors.5a536556.css rel=stylesheet><link href=/css/app.6b3e38ab.css rel=stylesheet></head><body><noscript><strong>This site doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=/js/chunk-vendors.5d1766e1.js></script><script src=/js/app.36a7aa94.js></script></body></html>
